force-app/main/default/objects/SiteLocation__c/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <label>Site Location Coordinates</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>