force-app/main/default/objects/SiteLocation__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Site Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>