force-app/main/default/objects/SiteLocation__c/fields/ExternalTimeCreated__c.field-meta.xml
<CustomField>
    <fullName>ExternalTimeCreated__c</fullName>
    <description>Time of creation of the record in the external system.</description>
    <label>External Time Created</label>
    <type>DateTime</type>
</CustomField>