force-app/main/default/objects/SiteLocation__c/fields/LeadTime__c.field-meta.xml
<CustomField>
    <fullName>LeadTime__c</fullName>
    <label>Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>instant</fullName>
                <default>true</default>
                <label>instant</label>
            </value>
            <value>
                <fullName>1-3 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>