force-app/main/default/objects/SiteLocation__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMS</fullName>
                <default>true</default>
                <label>AMS</label>
            </value>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>BER</fullName>
            </value>
            <value>
                <fullName>BOS</fullName>
            </value>
            <value>
                <fullName>BRU</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>CHI</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
            <value>
                <fullName>COP</fullName>
            </value>
            <value>
                <fullName>DAL</fullName>
            </value>
            <value>
                <fullName>DEN</fullName>
            </value>
            <value>
                <fullName>DUB</fullName>
            </value>
            <value>
                <fullName>DUS</fullName>
            </value>
            <value>
                <fullName>ENF</fullName>
            </value>
            <value>
                <fullName>FRA</fullName>
            </value>
            <value>
                <fullName>GEN</fullName>
            </value>
            <value>
                <fullName>GRR</fullName>
            </value>
            <value>
                <fullName>HAM</fullName>
            </value>
            <value>
                <fullName>HOU</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>JAX</fullName>
            </value>
            <value>
                <fullName>LAS</fullName>
            </value>
            <value>
                <fullName>LAX</fullName>
            </value>
            <value>
                <fullName>LIS</fullName>
            </value>
            <value>
                <fullName>LON</fullName>
            </value>
            <value>
                <fullName>LYO</fullName>
            </value>
            <value>
                <fullName>MAD</fullName>
            </value>
            <value>
                <fullName>MAN</fullName>
            </value>
            <value>
                <fullName>MIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>