force-app/main/default/objects/SiteLocation__c/fields/NetworkProvider__c.field-meta.xml
<CustomField>
    <fullName>NetworkProvider__c</fullName>
    <label>Network Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colt</fullName>
                <default>true</default>
                <label>Colt</label>
            </value>
            <value>
                <fullName>PacketFabric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>