force-app/main/default/objects/SiteLocation__c/fields/SingleArmed__c.field-meta.xml
<CustomField>
    <fullName>SingleArmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Armed</label>
    <type>Checkbox</type>
</CustomField>