force-app/main/default/objects/SiteLocation__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aligned Energy</fullName>
                <default>true</default>
                <label>Aligned Energy</label>
            </value>
            <value>
                <fullName>ColoCSX</fullName>
            </value>
            <value>
                <fullName>Cologix</fullName>
            </value>
            <value>
                <fullName>Colt</fullName>
            </value>
            <value>
                <fullName>Coresite</fullName>
            </value>
            <value>
                <fullName>Culver Connect 1</fullName>
            </value>
            <value>
                <fullName>CyrusOne</fullName>
            </value>
            <value>
                <fullName>Databank</fullName>
            </value>
            <value>
                <fullName>Data Foundry</fullName>
            </value>
            <value>
                <fullName>Digital Realty</fullName>
            </value>
            <value>
                <fullName>Dupont Fabros</fullName>
            </value>
            <value>
                <fullName>EdgeConneX</fullName>
            </value>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>Fiberhub</fullName>
            </value>
            <value>
                <fullName>Flexential</fullName>
            </value>
            <value>
                <fullName>Global Switch</fullName>
            </value>
            <value>
                <fullName>I/O</fullName>
            </value>
            <value>
                <fullName>iM Interconnect</fullName>
            </value>
            <value>
                <fullName>Interxion</fullName>
            </value>
            <value>
                <fullName>Iron Mountain</fullName>
            </value>
            <value>
                <fullName>JAXNAP</fullName>
            </value>
            <value>
                <fullName>JTC</fullName>
            </value>
            <value>
                <fullName>LA Times</fullName>
            </value>
            <value>
                <fullName>Lightbound</fullName>
            </value>
            <value>
                <fullName>Markley</fullName>
            </value>
            <value>
                <fullName>NantWorks</fullName>
            </value>
            <value>
                <fullName>Netrality</fullName>
            </value>
            <value>
                <fullName>OpenColo</fullName>
            </value>
            <value>
                <fullName>Phoenix NAP</fullName>
            </value>
            <value>
                <fullName>Portland NAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>