force-app/main/default/objects/SiteLocation__c/recordTypes/MetroExtension.recordType-meta.xml
<RecordType>
    <fullName>MetroExtension</fullName>
    <active>true</active>
    <label>Metro Extension</label>
</RecordType>